# c-VR

./: .gitignore  CMakeLists.txt  build.bat  compile_commands.json  run.bat
include/: glad.c  glad.h
lib/: glfw3.lib
res/: default.frag  default.vert
scripts/: build-ninjagcc.bat  clean.ps1  generate-compile-commands.bat  generate-vs-sln.bat  run-ninjagcc.bat  run-vs.bat
src/: CMakeLists.txt  application.c  application.h  color.c  color.h  file-manager.c  file-manager.h  main.c  object.c  object.h  renderer.c  renderer.h  shader.c  shader.h
src/data-structures/: array.c  array.h  queue.c  queue.h  stack.c  stack.h
src/math/: matrix.c  matrix.h  ray.c  ray.h  vector.c  vector.h
